已修改        package.json 已修改        package-lock.json 已修改        script/examples.js 缺失         src/Button/style/index - 副本.scss 已修改        src/Button/style/index.scss 已修改        src/Icon/index.js Add        examples/Input.js Add        examples/Input.scss Add        src/Input/Input - 副本.js Add        src/Input/Input.js Add        src/Input/InputGroup.js Add        src/Input/TextArea.js Add        src/Input/index.js Add        src/Input/style/index.scss

--- a/src/Button/style/index.scss
+++ b/src/Button/style/index.scss
@@ -54,8 +54,8 @@
 	}
 	.#{$btnPrefix}-#{$type}.active,
 	.#{$btnPrefix}-#{$type}:active {
-		border-left-color: shade($bgColor, 15%);
-		border-right-color: shade($bgColor, 15%);
+		border-left-color: shade($bgColor, 30%);
+		border-right-color: shade($bgColor, 30%);
 	}
 
 	.#{$btnPrefix}-#{$type}:last-child {
@@ -115,7 +115,7 @@ $defaultColor: #404040;
 $defaultBGColor: #FFF;
 
 $defaultHoverColor: #404040; //#E0E0E0 #FAFAFA 
-$defaultHoverBGColor: #FFF;//mix(#FFF,$defaultBGColor, 30%);
+$defaultHoverBGColor: #F7F7FA;//mix(#FFF,$defaultBGColor, 30%); F7F7FA fbfbfb
 $defaultHoverBorderColor: #bababa;
 
 $defaultActiveColor: #272727;
