已添加        src/Table/Colgroup.js 已添加        src/Table/Table.js 已添加        src/Table/Tbody.js 已添加        src/Table/Thead.js 已添加        src/Table/index.js 已添加        src/Table/style/index.scss 已添加        src/Table/test/table-layout-auto.html 已添加        src/Table/test/table-layout-fixed.html 已添加        src/Table/test/table.html 缺失         dist/Button.html 缺失         dist/Icon.html 缺失         dist/static/css/vendors.427057df.css 缺失         dist/static/css/vendors.427057df.css.map 缺失         dist/static/js/app.03cbec94.js 缺失         dist/static/js/app.03cbec94.js.map 缺失         dist/static/js/app.74062f0b.js 缺失         dist/static/js/app.74062f0b.js.map 缺失         dist/static/js/app.d4aa7d15.js 缺失         dist/static/js/vendors.4e89407d.chunk.js 缺失         dist/static/js/vendors.5ed7f179.chunk.js 缺失         dist/static/js/vendors.5ed7f179.chunk.js.map 已修改        package-lock.json 已修改        package.json 已修改        src/Input/style/index.scss Add        examples/Table.js

--- a/src/Input/style/index.scss
+++ b/src/Input/style/index.scss
@@ -96,74 +96,49 @@ input[type="text"]::-ms-clear{
 			resize: none;
 		}
 	}
+
+	&-group {
+		position:relative;
+		display: table;
+		width:100%;
+		border-collapse: separate;
+		line-height: 1.5;
+
+		> * {
+			display: table-cell;
+		}
+
+		&-addon {
+			padding: 0 11px;
+			font-size: $inputFontSize;
+			font-weight: normal;
+			line-height: 1;
+			color: rgba(0, 0, 0, 0.65);
+			text-align: center;
+			background-color: #fafafa;
+			border: 1px solid #d9d9d9;
+			border-radius: $inputBorderColor;
+			position: relative;
+			-webkit-transition: all .3s;
+			transition: all .3s;
+
+			width: 1px;
+			white-space: nowrap;
+			vertical-align: middle;
+		}
+	}
 }
 
 
-
-// .nex-input[disabled]:hover {
-// 	border-color: $inputBorderColor;
-// }
-textarea.nex-input {
-	min-width: 80px;
-	width:100%;
-	height:100%;
-	vertical-align:bottom;
-}
-
-
-.nex-input-wrapper {
-	position:relative;
-	display: inline-block;
-	width:100%;
-	vertical-align:middle;
-
-	textarea{
-		resize: none;
-	}
-
-	textarea.nex-input-autosize {
-		resize: both;
-	}
-	
-	&.nex-input-wrapper-block {
-		display: block;
-	}
-	
-	&:hover .nex-input {
-		border-color:$inputHoverBorderColor;
-	}
-	
-	.nex-input-prefix,
-	.nex-input-suffix {
-		position:absolute;
-		top:50%;
-		transform: translateY(-50%);
-		z-index:2;
-	}
-	
-	.nex-input-prefix {
-		left:7px;	
-	}
-	
-	.nex-input-suffix {
-		right:7px;	
-	}
-	
-	.nex-input:not(:last-child) {
-		padding-right: 24px;
-		z-index:1;
-	}
-
-	.nex-input:not(:first-child) {
-		padding-left: 24px;
-		z-index:1;
-	}
-}
 
 .nex-input-group {
 	position:relative;
 	display:inline-block;
 	width:100%;
+
+	> #{$inputPrefix} {
+
+	}
 	
 	>* {
 		position:relative;
