已添加        src/Table/Table - 副本.js 已修改        examples/Table.js 已修改        src/Table/Table.js 已修改        src/Table/Tbody.js 已修改        src/Table/Thead.js 已修改        src/Table/style/index.scss

--- a/src/Table/style/index.scss
+++ b/src/Table/style/index.scss
@@ -18,6 +18,8 @@ $cellFontSize: 12px;
 			>.nil-table-cell-inner {
 				padding: 4px;
 				line-height: 22px;
+				word-wrap: break-word;
+				word-break: break-all;
 			}
 		}
 
